src/test/ui/kindck/kindck-send-object.stderr
error[E0277]: `(dyn Dummy + 'static)` cannot be shared between threads safely
  --> $DIR/kindck-send-object.rs:12:5
   |
LL |     assert_send::<&'static (dyn Dummy + 'static)>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `(dyn Dummy + 'static)` cannot be shared between threads safely
   |
   = help: the trait `std::marker::Sync` is not implemented for `(dyn Dummy + 'static)`
   = note: required because of the requirements on the impl of `std::marker::Send` for `&'static (dyn Dummy + 'static)`
note: required by `assert_send`
  --> $DIR/kindck-send-object.rs:5:1
   |
LL | fn assert_send<T:Send>() { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: `dyn Dummy` cannot be sent between threads safely
  --> $DIR/kindck-send-object.rs:17:5
   |
LL |     assert_send::<Box<dyn Dummy>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `dyn Dummy` cannot be sent between threads safely
   |
   = help: the trait `std::marker::Send` is not implemented for `dyn Dummy`
   = note: required because of the requirements on the impl of `std::marker::Send` for `std::ptr::Unique<dyn Dummy>`
   = note: required because it appears within the type `std::boxed::Box<dyn Dummy>`
note: required by `assert_send`
  --> $DIR/kindck-send-object.rs:5:1
   |
LL | fn assert_send<T:Send>() { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
